Variances calculated before optimisation

--- a/1D_example.ipynb
+++ b/1D_example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPgcKYndJPskEK6DykiNs5",
+      "authorship_tag": "ABX9TyMibpOjFg1xizaDdM8aj8Jd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#initial guesses for x1,x2,y1,y2\n",
+        "####initial guesses for x1,x2,y1,y2####\n",
         "x_1, y_1 = 0.2, 0.1\n",
         "x_2, y_2 = 0.7, 0.9\n",
         "\n",
@@ -212,9 +212,63 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Calculate the variances before optimising parameters\n",
+        "\n",
+        "def variance(function, mean):\n",
+        "  integrand = lambda x: (function(x) - mean)**2\n",
+        "  return quad(integrand, 0, 1)  #will include error\n",
+        "\n",
+        "#variance of original function\n",
+        "f_mean = np.mean(f_evals)\n",
+        "f_var = variance(f, f_mean)\n",
+        "\n",
+        "#variance of transformed function\n",
+        "h_mean = np.mean(h)\n",
+        "h_1_var, h_2_var, h_3_var = variance(h_1, h_mean), variance(h_2, h_mean), variance(h_3, h_mean)\n",
+        "h_var, h_var_err = np.sum([h_1_var[0], h_2_var[0], h_3_var[0]]), np.sum([h_1_var[1], h_2_var[1], h_3_var[1]])\n",
+        "\n",
+        "#def integrand_2(y):\n",
+        "  #return (h_1(y) - h_var)**2\n",
+        "\n",
+        "#def integrand_3(y):\n",
+        "  #return (h_2(y) - h_var)**2\n",
+        "\n",
+        "#def integrand_4(y):\n",
+        "  #return (h_3(y) - h_var)**2\n",
+        "\n",
+        "print(np.var(f_evals))\n",
+        "print(f_var)\n",
+        "print(h_var, h_var_err)"
+      ],
       "metadata": {
-        "id": "tyPu-6qov503"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tyPu-6qov503",
+        "outputId": "b072420a-0db8-4066-9909-bf3d9ca0da3c"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.004667025123124368\n",
+            "(0.004505828982124246, 5.002475080977671e-17)\n",
+            "2.1606911225272585 1.3209948960161205e-11\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Optimisation\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Htmo7zInZjsX"
       },
       "execution_count": null,
       "outputs": []
