--- a/piecewise_linear_pytorch.ipynb
+++ b/piecewise_linear_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpILSjqjiA5q/a6iuQwmD8",
+      "authorship_tag": "ABX9TyPYg0OhzZ8TiIEFrMLhSoiF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "DFMX5b4lv9rT",
-        "outputId": "0cdef705-500e-41e7-f514-09d1a7bff413"
+        "outputId": "4f5efc08-387d-4f80-b848-19029b69fbf4"
       },
       "outputs": [
         {
@@ -49,7 +49,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 1
         }
       ],
       "source": [
@@ -84,9 +84,9 @@
           "height": 527
         },
         "id": "3o9t8-Ys9O8L",
-        "outputId": "a189db35-eba9-4689-fad7-b2da3ccb53ae"
+        "outputId": "f094d347-c2db-4ec6-b9f9-19f7b973d526"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,12 +124,12 @@
       ],
       "metadata": {
         "id": "aQltWkEX5Qhv",
-        "outputId": "4380dd4b-776b-4a63-d8cb-ed3e6966a45f",
+        "outputId": "988a8356-287b-44d3-c4cc-8a6aecad1b61",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,9 +153,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b3db5251-032e-4335-e8e6-4cab53bc399c"
+        "outputId": "594da5ee-19d2-4140-d18e-f3dce5356671"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,9 +216,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s0Daug6olq_R",
-        "outputId": "07b1418b-402c-4ba9-974d-f408226d860c"
+        "outputId": "9fd40e03-6092-4229-809b-9fcd8cf9c351"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +241,7 @@
       "metadata": {
         "id": "qUoZaYqpIFn-"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -296,9 +296,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UtShP_Lutq5S",
-        "outputId": "5284b1cc-97c3-4a8c-9cf8-0df9be9a3983"
+        "outputId": "abd27ffb-3715-467d-cba7-60c763cb6bdb"
       },
-      "execution_count": 17,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,9 +335,9 @@
           "height": 490
         },
         "id": "qjrD8r4ibG4j",
-        "outputId": "b0e6101d-5d62-4ce0-9163-dd4dee67f4b5"
+        "outputId": "d5726a88-4ed9-4f1d-8cff-03acf79645eb"
       },
-      "execution_count": 21,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,32 +362,52 @@
     {
       "cell_type": "code",
       "source": [
-        "#check integral is preserved\n",
-        "from scipy.integrate import quad, trapezoid\n",
+        "#check integral is preserved using (naive) MC\n",
         "\n",
-        "x_int_test, y_int_test = torch.linspace(0, 1, 10000), torch.linspace(0, 1, 1000000)\n",
+        "###REFERENCE VALUE: 0.851121###\n",
+        "N = 100000\n",
+        "#torch.manual_seed(42)\n",
+        "test_params = params\n",
         "\n",
-        "F_numpy = trapezoid(f(x_int_test).numpy(), x_int_test.numpy())\n",
-        "print(\"F:\", F_numpy)\n",
+        "def MC_F(N):\n",
+        "  x, y = torch.rand(N), torch.rand(N)\n",
+        "  f_evals = f(x, y)\n",
+        "  F_est = torch.mean(f_evals)\n",
+        "  alpha_F = torch.std(f_evals) / torch.sqrt(torch.tensor(N))\n",
+        "  return F_est, alpha_F\n",
         "\n",
-        "H_numpy = trapezoid(h(y_int_test, test_params).numpy(), y_int_test.numpy())\n",
-        "print(\"H:\", H_numpy)"
+        "def MC_H(N, params):\n",
+        "  y1, y2 = torch.rand(N), torch.rand(N)\n",
+        "  y = torch.stack((y1, y2), dim=0)\n",
+        "  h_evals = h(y, params)\n",
+        "  H_est = torch.mean(h_evals)\n",
+        "  alpha_H = torch.std(h_evals) / torch.sqrt(torch.tensor(N))\n",
+        "  return H_est, alpha_H\n",
+        "\n",
+        "F_est, alpha_F = MC_F(N)\n",
+        "print(f'F estimate: {F_est} ± {alpha_F}')\n",
+        "\n",
+        "H_est, alpha_H = MC_H(N, test_params)\n",
+        "print(f'H estimate: {H_est} ± {alpha_H}')\n",
+        "\n",
+        "\n",
+        "#can histogram results if needed"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "elMPpM3yfRW3",
-        "outputId": "e3af10aa-9fad-4050-be94-d38ff64955ef"
+        "outputId": "f5ee7aaa-c945-4ca4-983f-11e8ba3232e2"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "F: 0.922562\n",
-            "H: 0.92256206\n"
+            "F estimate: 0.8511173725128174 ± 0.00027727882843464613\n",
+            "H estimate: 0.8496197462081909 ± 0.0016861488111317158\n"
           ]
         }
       ]
@@ -395,9 +415,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#check variances are different in general\n",
+        "#check that variances are different in general\n",
         "\n",
-        "f_var = torch.var(f(x_int_test))\n",
+        "f_var = torch.var(f(x_int_test, y_int_test))\n",
         "h_var = torch.var(h(y_int_test, test_params))\n",
         "\n",
         "print(\"F variance:\", f_var)\n",
