g now correctly calculates area to left

--- a/piecewise_quadratic_2d_pytorch.ipynb
+++ b/piecewise_quadratic_2d_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrGRQG2H6vVYWFGXrA4Mpk",
+      "authorship_tag": "ABX9TyMyqRzmbfOUgOzNS4mkKJR3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "height": 35
         },
         "id": "G2yMqtWzd52u",
-        "outputId": "59599a39-f136-40c3-f219-55d0f91bbfac"
+        "outputId": "06943e71-c0de-4c85-87d6-7940e5499b6e"
       },
       "outputs": [
         {
@@ -97,9 +97,9 @@
         },
         "collapsed": true,
         "id": "DusdpPv1eQN-",
-        "outputId": "92930924-af97-4663-9547-78c59753f851"
+        "outputId": "112acf34-674d-46a6-e0f0-0518ed8792d9"
       },
-      "execution_count": 11,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -127,36 +127,101 @@
     {
       "cell_type": "code",
       "source": [
-        "#illustration of 2d indexing\n",
+        "### experimenting ###\n",
         "\n",
-        "D, n = 2, 3\n",
+        "D, n, K = 2, 10, 8\n",
+        "x = torch.rand(D, n)\n",
+        "params = torch.tensor([[0.2, 0.3, 0.35, 0.5, 0.6, 0.8, 0.95],\n",
+        "                      [0.1, 0.2, 0.25, 0.4, 0.45, 0.6, 0.8]])\n",
+        "#row_indices = torch.arange(D).unsqueeze(1)\n",
+        "#i_values = torch.tensor([[2,1,3],\n",
+        "#                         [1,4,0]])\n",
+        "#v = torch.tensor([[0, 0.4, 1.2, 0.8, 1.0],\n",
+        "#                 [0, 0.3, 0.9, 0.7, 0.6]])\n",
+        "#print(v[row_indices, i_values])\n",
+        "i_values = []\n",
+        "bins = torch.linspace(0, 1, K+1).repeat(2, 1)\n",
+        "for d in range(D):\n",
+        "  i_d = torch.bucketize(x[d], bins[d], right=False) - 1\n",
+        "  i_values.append(i_d.clamp(min=0, max=K-1))\n",
+        "i_values = torch.stack(i_values, dim=0)\n",
+        "\n",
         "row_indices = torch.arange(D).unsqueeze(1)\n",
-        "i_values = torch.tensor([[2,1,3],\n",
-        "                         [1,4,0]])\n",
-        "v = torch.tensor([[0, 0.4, 1.2, 0.8, 1.0],\n",
-        "                 [0, 0.3, 0.9, 0.7, 0.6]])\n",
-        "print(v[row_indices, i_values])\n",
+        "x_left = bins[row_indices, i_values]    #shape (D, n)\n",
+        "x_right = bins[row_indices, i_values+1]\n",
+        "w_b = x_right - x_left\n",
         "\n",
-        "bins = torch.linspace(0, 1, 6).repeat(2, 1)\n",
-        "print(bins[:, 1:] - bins[:, :-1])"
+        "zeros = torch.zeros((D, 1))\n",
+        "ones = torch.ones((D, 1))\n",
+        "v = torch.cat([zeros, params, ones], dim=1)\n",
+        "\n",
+        "v_left = v[row_indices, i_values]\n",
+        "v_right = v[row_indices, i_values+1]\n",
+        "w_v = v_right - v_left\n",
+        "\n",
+        "#area calcs\n",
+        "v_left_for_areas = v[:, :-1]    #full bin area of bin corresponding to every x\n",
+        "v_right_for_areas = v[:, 1:]\n",
+        "bin_widths = bins[:, 1:] - bins[:, :-1]\n",
+        "bin_areas = 0.5 * (v_left_for_areas + v_right_for_areas) * bin_widths\n",
+        "\n",
+        "#cumulative area to left of x values\n",
+        "cum_areas = torch.zeros(D, n)\n",
+        "for d in range(D):\n",
+        "  for i in range(n):\n",
+        "    cum_areas[d, i] = torch.sum(bin_areas[d, :i_values[d, i]])\n",
+        "\n",
+        "\n",
+        "#compute bin areas once per bin\n",
+        "#bin_area = torch.zeros(D, K)\n",
+        "#bin_area.scatter_(1, i_values, area)    #for each sample, place its associated area in the correct bin index; duplicates will be overwritten (ok)\n",
+        "\n",
+        "#compute cumulative area of whole bins to the left of each x\n",
+        "#left_mask = torch.arange(K).view(1, 1, K) < i_values.unsqueeze(-1)\n",
+        "#cum_areas = (left_mask * bin_area.unsqueeze(1)).sum(dim=2)\n",
+        "\n",
+        "#print('bins:', bins)\n",
+        "print('x values:', x)\n",
+        "print('i_values:', i_values)\n",
+        "#print('w_b:', w_b)\n",
+        "#print('w_v:', w_v)\n",
+        "print('v_left_for_areas:', v_left_for_areas)\n",
+        "print('v_right_for_areas:', v_right_for_areas)\n",
+        "print('bin widths:', bin_widths)\n",
+        "print('bin areas:', bin_areas)\n",
+        "print(cum_areas)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ycu53dmOBsnL",
-        "outputId": "693fd721-e7a3-4ab8-ce53-7f397de7770f"
+        "outputId": "2555e6ee-7ff8-4ae8-a2a4-f7d886ae628d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[1.2000, 0.4000, 0.8000],\n",
-            "        [0.3000, 0.6000, 0.0000]])\n",
-            "tensor([[0.2000, 0.2000, 0.2000, 0.2000, 0.2000],\n",
-            "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000]])\n"
+            "x values: tensor([[0.3733, 0.8053, 0.4989, 0.7676, 0.7289, 0.9666, 0.3036, 0.0144, 0.2479,\n",
+            "         0.9892],\n",
+            "        [0.3543, 0.9701, 0.3568, 0.3926, 0.2747, 0.5394, 0.6007, 0.7844, 0.5513,\n",
+            "         0.3964]])\n",
+            "i_values: tensor([[2, 6, 3, 6, 5, 7, 2, 0, 1, 7],\n",
+            "        [2, 7, 2, 3, 2, 4, 4, 6, 4, 3]])\n",
+            "v_left_for_areas: tensor([[0.0000, 0.2000, 0.3000, 0.3500, 0.5000, 0.6000, 0.8000, 0.9500],\n",
+            "        [0.0000, 0.1000, 0.2000, 0.2500, 0.4000, 0.4500, 0.6000, 0.8000]])\n",
+            "v_right_for_areas: tensor([[0.2000, 0.3000, 0.3500, 0.5000, 0.6000, 0.8000, 0.9500, 1.0000],\n",
+            "        [0.1000, 0.2000, 0.2500, 0.4000, 0.4500, 0.6000, 0.8000, 1.0000]])\n",
+            "bin widths: tensor([[0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250],\n",
+            "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])\n",
+            "bin areas: tensor([[0.0125, 0.0312, 0.0406, 0.0531, 0.0688, 0.0875, 0.1094, 0.1219],\n",
+            "        [0.0063, 0.0188, 0.0281, 0.0406, 0.0531, 0.0656, 0.0875, 0.1125]])\n",
+            "tensor([[0.0437, 0.2938, 0.0844, 0.2938, 0.2063, 0.4031, 0.0437, 0.0000, 0.0125,\n",
+            "         0.4031],\n",
+            "        [0.0250, 0.3000, 0.0250, 0.0531, 0.0250, 0.0938, 0.0938, 0.2125, 0.0938,\n",
+            "         0.0531]])\n"
           ]
         }
       ]
@@ -171,8 +236,6 @@
         "  This version does not yet predict bin widths.\n",
         "  x.shape = (D, n); params.shape = (D, K-1) where D is dimensions\n",
         "  x ---> y\n",
-        "  In the neural_importance_sampling framework, params represents the pdf and does NOT need to be monotonically increasing.\n",
-        "  Only the CDF does, and it will be so long as the pdf is non-negative.\n",
         "  '''\n",
         "\n",
         "  #bins\n",
@@ -180,7 +243,7 @@
         "  K = params.size(1) + 1\n",
         "\n",
         "  #bin edges\n",
-        "  bins = torch.linspace(0, 1, K+1).repeat(D, 1)\n",
+        "  bins = torch.linspace(0, 1, K+1).repeat(D, 1)   #edges\n",
         "\n",
         "  #find indices\n",
         "  i_values = []\n",
@@ -211,41 +274,68 @@
         "  #transform to local coordinate alpha\n",
         "  alpha = (x - x_left) / (w_b + 1e-12)    #avoid instability\n",
         "\n",
-        "  #compute cumulative area to the left of arbitrary bin using trapezoid rule as in paper\n",
-        "  area = 0.5 * w_v * w_b\n",
-        "  areas = torch.cumsum(area, dim=1)\n",
-        "  c_left = areas[row_indices, (i_values - 1).clamp(min=0)]   #shape (D, n)\n",
+        "  #area calcs\n",
+        "  v_left_for_areas = v[:, :-1]\n",
+        "  v_right_for_areas = v[:, 1:]\n",
+        "  bin_widths = bins[:, 1:] - bins[:, :-1]\n",
+        "  bin_areas = 0.5 * (v_left_for_areas + v_right_for_areas) * bin_widths   #(D, K)\n",
+        "\n",
+        "  #cumulative area to left of x values\n",
+        "  cum_areas = torch.zeros(D, n)\n",
+        "  for d in range(D):\n",
+        "    for i in range(n):\n",
+        "      cum_areas[d, i] = torch.sum(bin_areas[d, :i_values[d, i]])\n",
+        "\n",
+        "  c_left = cum_areas\n",
         "\n",
         "  #compute quadratic mappings\n",
         "  result = c_left + ((alpha**2/2) * w_v * w_b) + (alpha * v_left * w_b)\n",
-        "  print(result.shape)\n",
-        "\n",
-        "g(torch.rand(2, 1000), torch.rand(2, 15))"
+        "  return result   #quadratic in alpha with shape (D, n)\n"
       ],
       "metadata": {
-        "id": "habMCCwLf8FP",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "30f1a169-9c0c-44cd-a27c-7a7302c7d686"
+        "id": "habMCCwLf8FP"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([2, 1000])\n"
-          ]
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#might not need this function any more if params do not have to be monotonically increasing\n",
+        "### previous incorrect ways of calculating cumulative area to left ###\n",
+        "cum_areas = torch.zeros((D, n))\n",
+        "for d in range(D):\n",
+        "  area_validities = torch.zeros((K, n))\n",
+        "  for i in range(n):\n",
+        "    for j in range(K):\n",
+        "      if i_values[i] > j:\n",
+        "        area_validities[j, i] = 1\n",
+        "      else:\n",
+        "        area_validities[j, i] = 0\n",
         "\n",
+        "  for _ in range(n):\n",
+        "    for k in range(K):\n",
+        "      cum_areas[d, _] = area_validities[k, _] * area[d, _]\n",
+        "\n",
+        "\n",
+        "# --- Compute bin areas once per bin ---\n",
+        "bin_area = torch.zeros(D, K)\n",
+        "bin_area.scatter_(1, i_values, area)\n",
+        "\n",
+        "# --- Compute cumulative area left of each x ---\n",
+        "left_mask = torch.arange(K).view(1, 1, K) < i_values.unsqueeze(-1)\n",
+        "cum_areas = (left_mask * bin_area.unsqueeze(1)).sum(dim=2)"
+      ],
+      "metadata": {
+        "id": "RXy6Z8np3XVt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#unconstrained parameters (makes varying K easier)\n",
+        "\n",
         "import torch.nn.functional\n",
         "def u_to_y(u):\n",
         "  zeros = torch.zeros((u.size(0), 1))\n",
@@ -257,7 +347,7 @@
       "metadata": {
         "id": "omsSBn3nDRdz"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -265,26 +355,29 @@
       "source": [
         "#test g\n",
         "\n",
-        "n = 1000\n",
+        "n = 10\n",
         "test_x = torch.rand(2, n)\n",
         "test_params = u_to_y(torch.zeros(2, 7))\n",
         "test_g = g(test_x, test_params)\n",
-        "print(test_g.shape)"
+        "print(test_g)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6qUBngmKCzhe",
-        "outputId": "82691289-1363-4be1-89e5-14da259390eb"
+        "outputId": "e0ef5236-6f9f-4774-d6d5-3558c9584d79"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch.Size([2, 1000])\n"
+            "tensor([[6.0035e-02, 5.3394e-02, 1.4708e-02, 2.6372e-04, 2.3673e-04, 1.2521e-01,\n",
+            "         8.7004e-02, 1.4825e-01, 3.0969e-01, 3.9349e-01],\n",
+            "        [4.3699e-01, 3.5090e-01, 2.8679e-03, 5.9596e-03, 2.9418e-02, 1.9408e-02,\n",
+            "         2.8549e-01, 4.3220e-01, 4.0739e-01, 1.6990e-02]])\n"
           ]
         }
       ]
@@ -297,7 +390,6 @@
         "  '''\n",
         "  Resulting function when the piecewise warp is applied, in accordance with change of variables formula.\n",
         "  Integral should be preserved.\n",
-        "  y ---> z\n",
         "  '''\n",
         "\n",
         "  D, n = y.shape\n",
@@ -378,12 +470,12 @@
       "source": [
         "#test h\n",
         "\n",
-        "test_y = torch.linspace(1e-10, 1, 100)\n",
+        "test_y = torch.linspace(1e-10, 1, 1000)\n",
         "test_ys = test_y.repeat(2, 1)\n",
         "params = torch.tensor([[0.2, 0.3, 0.5, 0.6, 0.8],\n",
         "                      [0.1, 0.2, 0.4, 0.5, 0.7]])\n",
         "test_h = h(test_ys, params)\n",
-        "print(test_h)"
+        "print(test_h.shape)"
       ],
       "metadata": {
         "colab": {
@@ -391,7 +483,7 @@
         },
         "collapsed": true,
         "id": "LjQmHHmgBDkS",
-        "outputId": "b9143674-32e4-4b38-a931-631d2792dfc6"
+        "outputId": "25c9f306-4e8c-46ff-89e6-b90fef2c9439"
       },
       "execution_count": null,
       "outputs": [
@@ -399,26 +491,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([ 3.5741e+09,  4.6015e+01,  2.6078e+01,  1.9855e+01,  1.4909e+01,\n",
-            "         1.1797e+01,  9.6795e+00,  7.8860e+00,  6.6501e+00,  5.8947e+00,\n",
-            "         5.3315e+00,  4.8606e+00,  4.4593e+00,  4.1720e+00,  3.9442e+00,\n",
-            "         3.7322e+00,  3.5075e+00,  3.2535e+00,  3.0284e+00,  2.8271e+00,\n",
-            "         2.6459e+00,  2.4817e+00,  2.3111e+00,  2.1428e+00,  1.9926e+00,\n",
-            "         1.8577e+00,  1.7271e+00,  1.5996e+00,  1.4862e+00,  1.3848e+00,\n",
-            "         1.2935e+00,  1.2109e+00,  1.1360e+00, -4.3890e-01,  1.0050e+00,\n",
-            "         9.4756e-01,  8.9464e-01,  8.4576e-01,  8.0052e-01,  7.5853e-01,\n",
-            "        -6.3536e-01, -6.0191e-01, -5.7075e-01, -5.4167e-01, -5.1450e-01,\n",
-            "        -4.8907e-01, -4.6523e-01, -4.4286e-01,  1.3859e-01,  1.3033e-01,\n",
-            "         1.2266e-01,  1.1553e-01,  1.0888e-01,  1.0268e-01,  9.6888e-02,\n",
-            "         9.1479e-02,  8.6421e-02,  8.1686e-02,  7.7250e-02,  7.3092e-02,\n",
-            "         6.9190e-02,  6.5526e-02,  6.2084e-02,  5.8848e-02,  5.5803e-02,\n",
-            "         5.2936e-02,  5.0236e-02,  4.7692e-02,  4.5292e-02,  4.3028e-02,\n",
-            "         4.0890e-02,  3.8872e-02,  3.6964e-02,  3.5161e-02,  3.3456e-02,\n",
-            "         3.1843e-02,  3.0315e-02,  2.8869e-02,  2.7499e-02,  2.6201e-02,\n",
-            "         2.4970e-02,  2.3802e-02,  2.2695e-02,  2.1644e-02,  2.0646e-02,\n",
-            "         1.9699e-02,  1.8799e-02,  1.7944e-02,  1.7131e-02,  1.6358e-02,\n",
-            "         1.5623e-02,  1.4924e-02,  1.4259e-02,  1.3626e-02,  1.3023e-02,\n",
-            "         1.2449e-02,  1.1902e-02,  1.1381e-02,  1.0885e-02,  1.0412e-02])\n"
+            "torch.Size([1000])\n"
           ]
         }
       ]
